--- a/model_experiements/svm.ipynb
+++ b/model_experiements/svm.ipynb
@@ -244,35 +244,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Progress:  40%|████      | 2/5 [00:00<00:00,  5.85it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      " [[6522  482]\n",
-      " [1357 4411]]\n",
+      " [[6035  920]\n",
+      " [1503 4314]]\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0     0.8278    0.9312    0.8764      7004\n",
-      "           1     0.9015    0.7647    0.8275      5768\n",
+      "           0     0.8006    0.8677    0.8328      6955\n",
+      "           1     0.8242    0.7416    0.7807      5817\n",
       "\n",
-      "    accuracy                         0.8560     12772\n",
-      "   macro avg     0.8646    0.8480    0.8520     12772\n",
-      "weighted avg     0.8611    0.8560    0.8543     12772\n",
+      "    accuracy                         0.8103     12772\n",
+      "   macro avg     0.8124    0.8047    0.8068     12772\n",
+      "weighted avg     0.8114    0.8103    0.8091     12772\n",
       "\n",
       "\n",
-      "Macro Average F1-Score: 0.8519691564373769\n"
+      "Accuracy: 0.8102881302849985\n",
+      "Precision: 0.8124182273322997\n",
+      "Recall: 0.8046702277108161\n",
+      "Macro Average F1-Score: 0.8067798331095009\n",
+      "Confusion Matrix:\n",
+      " [[6153  803]\n",
+      " [1593 4223]]\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.7943    0.8846    0.8370      6956\n",
+      "           1     0.8402    0.7261    0.7790      5816\n",
+      "\n",
+      "    accuracy                         0.8124     12772\n",
+      "   macro avg     0.8173    0.8053    0.8080     12772\n",
+      "weighted avg     0.8152    0.8124    0.8106     12772\n",
+      "\n",
+      "\n",
+      "Accuracy: 0.8124021296586282\n",
+      "Precision: 0.8172881342348988\n",
+      "Recall: 0.805330252330823\n",
+      "Macro Average F1-Score: 0.8080182694148983\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Progress:  60%|██████    | 3/5 [00:00<00:00,  5.76it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      " [[6039  917]\n",
+      " [1395 4421]]\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.8123    0.8682    0.8393      6956\n",
+      "           1     0.8282    0.7601    0.7927      5816\n",
+      "\n",
+      "    accuracy                         0.8190     12772\n",
+      "   macro avg     0.8203    0.8142    0.8160     12772\n",
+      "weighted avg     0.8196    0.8190    0.8181     12772\n",
+      "\n",
+      "\n",
+      "Accuracy: 0.8189790165988099\n",
+      "Precision: 0.8202807410344036\n",
+      "Recall: 0.8141578960065747\n",
+      "Macro Average F1-Score: 0.8160264852305266\n",
+      "Confusion Matrix:\n",
+      " [[6125  831]\n",
+      " [1372 4444]]\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.8170    0.8805    0.8476      6956\n",
+      "           1     0.8425    0.7641    0.8014      5816\n",
+      "\n",
+      "    accuracy                         0.8275     12772\n",
+      "   macro avg     0.8297    0.8223    0.8245     12772\n",
+      "weighted avg     0.8286    0.8275    0.8265     12772\n",
+      "\n",
+      "\n",
+      "Accuracy: 0.8275133103664266\n",
+      "Precision: 0.8297289595142954\n",
+      "Recall: 0.8223169136240926\n",
+      "Macro Average F1-Score: 0.8244726892574474\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Progress: 100%|██████████| 5/5 [00:00<00:00,  5.59it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      " [[6110  846]\n",
+      " [1334 4482]]\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.8208    0.8784    0.8486      6956\n",
+      "           1     0.8412    0.7706    0.8044      5816\n",
+      "\n",
+      "    accuracy                         0.8293     12772\n",
+      "   macro avg     0.8310    0.8245    0.8265     12772\n",
+      "weighted avg     0.8301    0.8293    0.8285     12772\n",
+      "\n",
+      "\n",
+      "Accuracy: 0.8293141246476667\n",
+      "Precision: 0.8310057437878502\n",
+      "Recall: 0.8245055578274285\n",
+      "Macro Average F1-Score: 0.8264950745792454\n",
+      "\n",
+      "Average Metrics across 5 folds:\n",
+      "Average Accuracy: 0.819699342311306\n",
+      "Average Precision: 0.8221443611807494\n",
+      "Average Recall: 0.814196169499947\n",
+      "Average Macro F1-Score: 0.8163584703183238\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, classification_report\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from tqdm import tqdm\n",
     "\n",
+    "# Load GloVe vectors\n",
     "def load_glove(file_path):\n",
     "    embeddings_index = {}\n",
     "    with open(file_path, encoding='utf8') as f:\n",
@@ -283,7 +413,7 @@
     "            embeddings_index[word] = coefs\n",
     "    return embeddings_index\n",
     "\n",
-    "# Load pre-trained GloVe vectors\n",
+    "# Convert text data to GloVe embeddings\n",
     "def get_embedding_matrix(data, embeddings_index, embed_dim=100):\n",
     "    embedding_matrix = []\n",
     "    for text in data:\n",
@@ -296,24 +426,56 @@
     "        embedding_matrix.append(document_embedding)\n",
     "    return np.array(embedding_matrix)\n",
     "\n",
-    "# Load GloVe vectors\n",
+    "# Assume `data` is a DataFrame with `processed_full_content` and `label` columns\n",
     "glove_path = \"glove.6B.100d.txt\"\n",
     "embeddings_index = load_glove(glove_path)\n",
-    "\n",
-    "# Convert text data to GloVe embeddings\n",
-    "X_train = get_embedding_matrix(data['processed_full_content'], embeddings_index)\n",
+    "X = get_embedding_matrix(data['processed_full_content'], embeddings_index)\n",
     "y = data['label']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_train, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "svm = SGDClassifier(loss='hinge', random_state=42)\n",
-    "svm.fit(X_train, y_train)\n",
-    "y_pred = svm.predict(X_test)\n",
+    "# Initialize classifier and StratifiedKFold\n",
+    "svm = SGDClassifier(loss='hinge', penalty='l2', alpha=0.01, random_state=42)\n",
+    "skf = StratifiedKFold(n_splits=5)\n",
     "\n",
-    "# Evaluate model performance\n",
-    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
-    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred, digits=4))\n",
-    "macro_f1 = f1_score(y_test, y_pred, average='macro')\n",
-    "print(\"\\nMacro Average F1-Score:\", macro_f1)"
+    "# Cross-validation loop with tqdm progress bar\n",
+    "accuracy_scores = []\n",
+    "precision_scores = []\n",
+    "recall_scores = []\n",
+    "macro_f1_scores = []\n",
+    "\n",
+    "for train_index, test_index in tqdm(skf.split(X, y), total=skf.get_n_splits(), desc=\"Cross-Validation Progress\"):\n",
+    "    X_train, X_test = X[train_index], X[test_index]\n",
+    "    y_train, y_test = y[train_index], y[test_index]\n",
+    "    \n",
+    "    # Train and predict\n",
+    "    svm.fit(X_train, y_train)\n",
+    "    y_pred = svm.predict(X_test)\n",
+    "    \n",
+    "    # Evaluate metrics for each fold\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred, average='macro')\n",
+    "    recall = recall_score(y_test, y_pred, average='macro')\n",
+    "    macro_f1 = f1_score(y_test, y_pred, average='macro')\n",
+    "    \n",
+    "    # Append each metric\n",
+    "    accuracy_scores.append(accuracy)\n",
+    "    precision_scores.append(precision)\n",
+    "    recall_scores.append(recall)\n",
+    "    macro_f1_scores.append(macro_f1)\n",
+    "    \n",
+    "    # Print metrics for each fold\n",
+    "    print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
+    "    print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred, digits=4))\n",
+    "    print(\"\\nAccuracy:\", accuracy)\n",
+    "    print(\"Precision:\", precision)\n",
+    "    print(\"Recall:\", recall)\n",
+    "    print(\"Macro Average F1-Score:\", macro_f1)\n",
+    "\n",
+    "# Calculate average metrics across all folds\n",
+    "print(\"\\nAverage Metrics across 5 folds:\")\n",
+    "print(\"Average Accuracy:\", np.mean(accuracy_scores))\n",
+    "print(\"Average Precision:\", np.mean(precision_scores))\n",
+    "print(\"Average Recall:\", np.mean(recall_scores))\n",
+    "print(\"Average Macro F1-Score:\", np.mean(macro_f1_scores))\n"
    ]
   },
   {
@@ -379,6 +541,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SVM + Pre-trained Word2Vec"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -433,6 +602,246 @@
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred, digits=4))\n",
     "macro_f1 = f1_score(y_test, y_pred, average='macro')\n",
     "print(\"\\nMacro Average F1-Score:\", macro_f1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SVM + Word2Vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Progress:  20%|██        | 1/5 [00:00<00:00,  5.99it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      " [[6351  604]\n",
+      " [ 606 5211]]\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9129    0.9132    0.9130      6955\n",
+      "           1     0.8961    0.8958    0.8960      5817\n",
+      "\n",
+      "    accuracy                         0.9053     12772\n",
+      "   macro avg     0.9045    0.9045    0.9045     12772\n",
+      "weighted avg     0.9053    0.9053    0.9053     12772\n",
+      "\n",
+      "\n",
+      "Accuracy: 0.9052615095521453\n",
+      "Precision: 0.9045120925236476\n",
+      "Recall: 0.9044892959195061\n",
+      "Macro Average F1-Score: 0.9045006715428003\n",
+      "Confusion Matrix:\n",
+      " [[6399  557]\n",
+      " [ 562 5254]]\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9193    0.9199    0.9196      6956\n",
+      "           1     0.9041    0.9034    0.9038      5816\n",
+      "\n",
+      "    accuracy                         0.9124     12772\n",
+      "   macro avg     0.9117    0.9116    0.9117     12772\n",
+      "weighted avg     0.9124    0.9124    0.9124     12772\n",
+      "\n",
+      "\n",
+      "Accuracy: 0.9123864704040088\n",
+      "Precision: 0.9117058901635291\n",
+      "Recall: 0.9116476290742438\n",
+      "Macro Average F1-Score: 0.9116766167041046\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Progress:  80%|████████  | 4/5 [00:00<00:00,  6.53it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      " [[6336  620]\n",
+      " [ 542 5274]]\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9212    0.9109    0.9160      6956\n",
+      "           1     0.8948    0.9068    0.9008      5816\n",
+      "\n",
+      "    accuracy                         0.9090     12772\n",
+      "   macro avg     0.9080    0.9088    0.9084     12772\n",
+      "weighted avg     0.9092    0.9090    0.9091     12772\n",
+      "\n",
+      "\n",
+      "Accuracy: 0.9090197306608205\n",
+      "Precision: 0.9080031511436957\n",
+      "Recall: 0.9088385592124362\n",
+      "Macro Average F1-Score: 0.9083863109330876\n",
+      "Confusion Matrix:\n",
+      " [[6349  607]\n",
+      " [ 537 5279]]\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9220    0.9127    0.9174      6956\n",
+      "           1     0.8969    0.9077    0.9022      5816\n",
+      "\n",
+      "    accuracy                         0.9104     12772\n",
+      "   macro avg     0.9094    0.9102    0.9098     12772\n",
+      "weighted avg     0.9106    0.9104    0.9105     12772\n",
+      "\n",
+      "\n",
+      "Accuracy: 0.9104290635765737\n",
+      "Precision: 0.9094448110774283\n",
+      "Recall: 0.9102028529890773\n",
+      "Macro Average F1-Score: 0.909795958594259\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Progress: 100%|██████████| 5/5 [00:00<00:00,  6.46it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      " [[6373  583]\n",
+      " [ 534 5282]]\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9227    0.9162    0.9194      6956\n",
+      "           1     0.9006    0.9082    0.9044      5816\n",
+      "\n",
+      "    accuracy                         0.9125     12772\n",
+      "   macro avg     0.9116    0.9122    0.9119     12772\n",
+      "weighted avg     0.9126    0.9125    0.9126     12772\n",
+      "\n",
+      "\n",
+      "Accuracy: 0.9125430629502036\n",
+      "Precision: 0.9116419447214367\n",
+      "Recall: 0.9121858915897372\n",
+      "Macro Average F1-Score: 0.9119002175847235\n",
+      "\n",
+      "Average Metrics across 5 folds:\n",
+      "Average Accuracy: 0.9099279674287504\n",
+      "Average Precision: 0.9090615779259474\n",
+      "Average Recall: 0.9094728457570002\n",
+      "Average Macro F1-Score: 0.909251955071795\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from gensim.models import Word2Vec\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, classification_report\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# Train or load Word2Vec model (assuming `data` is available and each entry is a list of words)\n",
+    "def train_word2vec_model(data, embed_dim=100):\n",
+    "    # Tokenize each document into a list of words if not already tokenized\n",
+    "    tokenized_data = [text.split() for text in data]  # Split each text into words\n",
+    "    # Train Word2Vec model\n",
+    "    model = Word2Vec(sentences=tokenized_data, vector_size=embed_dim, window=5, min_count=1, workers=4)\n",
+    "    return model\n",
+    "\n",
+    "# Convert text data to Word2Vec embeddings\n",
+    "def get_embedding_matrix(data, model, embed_dim=100):\n",
+    "    embedding_matrix = []\n",
+    "    for text in data:\n",
+    "        words = text.split()\n",
+    "        embeddings = [model.wv[word] for word in words if word in model.wv]\n",
+    "        if embeddings:\n",
+    "            document_embedding = np.mean(embeddings, axis=0)  # Average embeddings for the document\n",
+    "        else:\n",
+    "            document_embedding = np.zeros(embed_dim)  # Zero vector if no embeddings found\n",
+    "        embedding_matrix.append(document_embedding)\n",
+    "    return np.array(embedding_matrix)\n",
+    "\n",
+    "# Assume `data` is a DataFrame with `processed_full_content` and `label` columns\n",
+    "word2vec_model = train_word2vec_model(data['processed_full_content'])  # Train Word2Vec model on text data\n",
+    "X = get_embedding_matrix(data['processed_full_content'], word2vec_model)\n",
+    "y = data['label']\n",
+    "\n",
+    "# Initialize classifier and StratifiedKFold\n",
+    "svm = SGDClassifier(loss='hinge', penalty='l2', alpha=0.01, random_state=42)\n",
+    "skf = StratifiedKFold(n_splits=5)\n",
+    "\n",
+    "# Cross-validation loop with tqdm progress bar\n",
+    "accuracy_scores = []\n",
+    "precision_scores = []\n",
+    "recall_scores = []\n",
+    "macro_f1_scores = []\n",
+    "\n",
+    "for train_index, test_index in tqdm(skf.split(X, y), total=skf.get_n_splits(), desc=\"Cross-Validation Progress\"):\n",
+    "    X_train, X_test = X[train_index], X[test_index]\n",
+    "    y_train, y_test = y[train_index], y[test_index]\n",
+    "    \n",
+    "    # Train and predict\n",
+    "    svm.fit(X_train, y_train)\n",
+    "    y_pred = svm.predict(X_test)\n",
+    "    \n",
+    "    # Evaluate metrics for each fold\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred, average='macro')\n",
+    "    recall = recall_score(y_test, y_pred, average='macro')\n",
+    "    macro_f1 = f1_score(y_test, y_pred, average='macro')\n",
+    "    \n",
+    "    # Append each metric\n",
+    "    accuracy_scores.append(accuracy)\n",
+    "    precision_scores.append(precision)\n",
+    "    recall_scores.append(recall)\n",
+    "    macro_f1_scores.append(macro_f1)\n",
+    "    \n",
+    "    # Print metrics for each fold\n",
+    "    print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
+    "    print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred, digits=4))\n",
+    "    print(\"\\nAccuracy:\", accuracy)\n",
+    "    print(\"Precision:\", precision)\n",
+    "    print(\"Recall:\", recall)\n",
+    "    print(\"Macro Average F1-Score:\", macro_f1)\n",
+    "\n",
+    "# Calculate average metrics across all folds\n",
+    "print(\"\\nAverage Metrics across 5 folds:\")\n",
+    "print(\"Average Accuracy:\", np.mean(accuracy_scores))\n",
+    "print(\"Average Precision:\", np.mean(precision_scores))\n",
+    "print(\"Average Recall:\", np.mean(recall_scores))\n",
+    "print(\"Average Macro F1-Score:\", np.mean(macro_f1_scores))\n"
    ]
   },
   {
