Reran SVM and RNN

--- a/model_experiements/svm.ipynb
+++ b/model_experiements/svm.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,33 +121,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Confusion Matrix:\n",
-      " [[6705  299]\n",
-      " [ 303 5465]]\n",
+      "Stratified 5-Fold Cross-Validation Performance Metrics:\n",
       "\n",
-      "Classification Report:\n",
+      "Average Accuracy: 0.9559\n",
+      "Average Precision: 0.9551\n",
+      "Average Recall: 0.9564\n",
+      "Average Macro F1-Score: 0.9557\n",
+      "\n",
+      "Fold 1 - Confusion Matrix:\n",
+      " [[6594  361]\n",
+      " [ 222 5595]]\n",
+      "\n",
+      "Fold 1 - Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0     0.9568    0.9573    0.9570      7004\n",
-      "           1     0.9481    0.9475    0.9478      5768\n",
+      "           0     0.9674    0.9481    0.9577      6955\n",
+      "           1     0.9394    0.9618    0.9505      5817\n",
       "\n",
-      "    accuracy                         0.9529     12772\n",
-      "   macro avg     0.9524    0.9524    0.9524     12772\n",
-      "weighted avg     0.9529    0.9529    0.9529     12772\n",
+      "    accuracy                         0.9544     12772\n",
+      "   macro avg     0.9534    0.9550    0.9541     12772\n",
+      "weighted avg     0.9547    0.9544    0.9544     12772\n",
       "\n",
       "\n",
-      "Macro Average F1-Score: 0.9524171294036754\n"
+      "Fold 2 - Confusion Matrix:\n",
+      " [[6622  334]\n",
+      " [ 236 5580]]\n",
+      "\n",
+      "Fold 2 - Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9656    0.9520    0.9587      6956\n",
+      "           1     0.9435    0.9594    0.9514      5816\n",
+      "\n",
+      "    accuracy                         0.9554     12772\n",
+      "   macro avg     0.9546    0.9557    0.9551     12772\n",
+      "weighted avg     0.9555    0.9554    0.9554     12772\n",
+      "\n",
+      "\n",
+      "Fold 3 - Confusion Matrix:\n",
+      " [[6623  333]\n",
+      " [ 192 5624]]\n",
+      "\n",
+      "Fold 3 - Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9718    0.9521    0.9619      6956\n",
+      "           1     0.9441    0.9670    0.9554      5816\n",
+      "\n",
+      "    accuracy                         0.9589     12772\n",
+      "   macro avg     0.9580    0.9596    0.9586     12772\n",
+      "weighted avg     0.9592    0.9589    0.9589     12772\n",
+      "\n",
+      "\n",
+      "Fold 4 - Confusion Matrix:\n",
+      " [[6589  367]\n",
+      " [ 193 5623]]\n",
+      "\n",
+      "Fold 4 - Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9715    0.9472    0.9592      6956\n",
+      "           1     0.9387    0.9668    0.9526      5816\n",
+      "\n",
+      "    accuracy                         0.9562     12772\n",
+      "   macro avg     0.9551    0.9570    0.9559     12772\n",
+      "weighted avg     0.9566    0.9562    0.9562     12772\n",
+      "\n",
+      "\n",
+      "Fold 5 - Confusion Matrix:\n",
+      " [[6638  318]\n",
+      " [ 258 5558]]\n",
+      "\n",
+      "Fold 5 - Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9626    0.9543    0.9584      6956\n",
+      "           1     0.9459    0.9556    0.9507      5816\n",
+      "\n",
+      "    accuracy                         0.9549     12772\n",
+      "   macro avg     0.9542    0.9550    0.9546     12772\n",
+      "weighted avg     0.9550    0.9549    0.9549     12772\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, f1_score, accuracy_score, precision_score, recall_score\n",
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "seed = 42\n",
+    "np.random.seed(seed)\n",
+    "random.seed(seed)\n",
+    "\n",
     "# Step 1: Vectorization using CountVectorizer\n",
     "MAX_FEATURES = 5000  # Number of features to consider\n",
     "vectorizer = CountVectorizer(max_features=MAX_FEATURES)\n",
@@ -156,22 +232,45 @@
     "X = vectorizer.fit_transform(data['processed_full_content']).toarray()\n",
     "y = data['label']  # Target labels (binary classification: 0 or 1)\n",
     "\n",
-    "# Step 2: Train-Test Split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "# Step 2: Stratified K-Fold Cross-Validation\n",
+    "kf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "macro_f1_scores = []\n",
+    "precision_scores = []\n",
+    "recall_scores = []\n",
+    "accuracy_scores = []\n",
+    "confusion_matrices = []\n",
+    "classification_reports = []\n",
     "\n",
-    "# Step 3: Train the SVM Model\n",
-    "# svm = SVC(kernel='linear', random_state=42)\n",
-    "svm = SGDClassifier(loss='hinge', random_state=42)\n",
-    "svm.fit(X_train, y_train)\n",
+    "for train_index, test_index in kf.split(X, y):\n",
+    "    X_train, X_test = X[train_index], X[test_index]\n",
+    "    y_train, y_test = y[train_index], y[test_index]\n",
+    "    \n",
+    "    # Step 3: Train the SVM Model with L2 Regularization\n",
+    "    svm = SGDClassifier(loss='hinge', penalty='l2', alpha=0.01, random_state=42)\n",
+    "    svm.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Step 4: Make Predictions and Evaluate\n",
+    "    y_pred = svm.predict(X_test)\n",
+    "    \n",
+    "    # Collect evaluation metrics for each fold\n",
+    "    macro_f1_scores.append(f1_score(y_test, y_pred, average='macro'))\n",
+    "    precision_scores.append(precision_score(y_test, y_pred, average='macro'))\n",
+    "    recall_scores.append(recall_score(y_test, y_pred, average='macro'))\n",
+    "    accuracy_scores.append(accuracy_score(y_test, y_pred))\n",
+    "    \n",
+    "    confusion_matrices.append(confusion_matrix(y_test, y_pred))\n",
+    "    classification_reports.append(classification_report(y_test, y_pred, digits=4))\n",
     "\n",
-    "# Step 4: Make Predictions and Evaluate\n",
-    "y_pred = svm.predict(X_test)\n",
+    "# Calculate and print average metrics\n",
+    "print(\"Stratified 5-Fold Cross-Validation Performance Metrics:\")\n",
+    "print(f\"\\nAverage Accuracy: {np.mean(accuracy_scores):.4f}\")\n",
+    "print(f\"Average Precision: {np.mean(precision_scores):.4f}\")\n",
+    "print(f\"Average Recall: {np.mean(recall_scores):.4f}\")\n",
+    "print(f\"Average Macro F1-Score: {np.mean(macro_f1_scores):.4f}\")\n",
     "\n",
-    "# Evaluate model performance\n",
-    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
-    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred, digits=4))\n",
-    "macro_f1 = f1_score(y_test, y_pred, average='macro')\n",
-    "print(\"\\nMacro Average F1-Score:\", macro_f1)"
+    "for i, (conf_matrix, class_report) in enumerate(zip(confusion_matrices, classification_reports), 1):\n",
+    "    print(f\"\\nFold {i} - Confusion Matrix:\\n\", conf_matrix)\n",
+    "    print(f\"\\nFold {i} - Classification Report:\\n\", class_report)\n"
    ]
   },
   {
